pkg/main/default/objects/EnvelopeSettings__c/EnvelopeSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Envelope Settings</label>
</CustomObject>