pkg/main/default/objects/EnvelopeSettings__c/fields/AddAnchorTags__c.field-meta.xml
<CustomField>
    <fullName>AddAnchorTags__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add Anchor Tags</label>
    <type>Checkbox</type>
</CustomField>