pkg/main/default/objects/EnvelopeSettings__c/fields/AddFiles__c.field-meta.xml
<CustomField>
    <fullName>AddFiles__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add Files</label>
    <type>Checkbox</type>
</CustomField>