pkg/main/default/objects/EnvelopeSettings__c/fields/AllowSequentialSignNow__c.field-meta.xml
<CustomField>
    <fullName>AllowSequentialSignNow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow sequential sign now</label>
    <type>Checkbox</type>
</CustomField>