pkg/main/default/objects/EnvelopeSettings__c/fields/Chatter__c.field-meta.xml
<CustomField>
    <fullName>Chatter__c</fullName>
    <defaultValue>&quot;Disabled&quot;</defaultValue>
    <label>Chatter Setting</label>
    <length>20</length>
    <type>Text</type>
</CustomField>