pkg/main/default/objects/EnvelopeSettings__c/fields/ExpireAfterDays__c.field-meta.xml
<CustomField>
    <fullName>ExpireAfterDays__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>Expire Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>