pkg/main/default/objects/EnvelopeSettings__c/fields/ExpireWarnDays__c.field-meta.xml
<CustomField>
    <fullName>ExpireWarnDays__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>Expiration Warning Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>