pkg/main/default/objects/EnvelopeSettings__c/fields/FetchDocuments__c.field-meta.xml
<CustomField>
    <fullName>FetchDocuments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fetch Documents</label>
    <type>Checkbox</type>
</CustomField>