pkg/main/default/objects/EnvelopeSettings__c/fields/HideEmailMessage__c.field-meta.xml
<CustomField>
    <fullName>HideEmailMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Email Message</label>
    <type>Checkbox</type>
</CustomField>