pkg/main/default/objects/EnvelopeSettings__c/fields/HideEmailSubject__c.field-meta.xml
<CustomField>
    <fullName>HideEmailSubject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Email Subject</label>
    <type>Checkbox</type>
</CustomField>