pkg/main/default/objects/EnvelopeSettings__c/fields/HideRemindExpire__c.field-meta.xml
<CustomField>
    <fullName>HideRemindExpire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Remind and Expire</label>
    <type>Checkbox</type>
</CustomField>