pkg/main/default/objects/EnvelopeSettings__c/fields/HideSendButton__c.field-meta.xml
<CustomField>
    <fullName>HideSendButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Send Button</label>
    <type>Checkbox</type>
</CustomField>