pkg/main/default/objects/EnvelopeSettings__c/fields/HideTagButton__c.field-meta.xml
<CustomField>
    <fullName>HideTagButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Tag Button</label>
    <type>Checkbox</type>
</CustomField>