pkg/main/default/objects/EnvelopeSettings__c/fields/IsSmsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsSmsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SMS Enabled</label>
    <type>Checkbox</type>
</CustomField>