pkg/main/default/objects/EnvelopeSettings__c/fields/RemindAfterDays__c.field-meta.xml
<CustomField>
    <fullName>RemindAfterDays__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>Reminder Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>