pkg/main/default/objects/EnvelopeSettings__c/fields/RemindFrequencyDays__c.field-meta.xml
<CustomField>
    <fullName>RemindFrequencyDays__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>Reminder Repeat Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>