pkg/main/default/objects/EnvelopeSettings__c/fields/SignInNewWindow__c.field-meta.xml
<CustomField>
    <fullName>SignInNewWindow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign in New Window</label>
    <type>Checkbox</type>
</CustomField>