pkg/main/default/objects/EnvelopeSettings__c/fields/TagInNewWindow__c.field-meta.xml
<CustomField>
    <fullName>TagInNewWindow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tag in New Window</label>
    <type>Checkbox</type>
</CustomField>