pkg/main/default/objects/EnvelopeSettings__c/fields/UseMobileTagger__c.field-meta.xml
<CustomField>
    <fullName>UseMobileTagger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Mobile Tagger</label>
    <type>Checkbox</type>
</CustomField>