pkg/main/default/objects/EnvelopeSettings__c/fields/UseNotificationDefaults__c.field-meta.xml
<CustomField>
    <fullName>UseNotificationDefaults__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Notification Defaults</label>
    <type>Checkbox</type>
</CustomField>